--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,38 @@
 @tailwind utilities;
 
 :root {
+  /* Light Theme */
+  --primary-100: #0010f7;
+  --neutral-100: #ffffff;
+  --neutral-90: #f6f8fa;
+  --tertiary-100: #cc9650;
+
+  --color-text-primary-100: #000000;
+  --color-text-primary-90: #b9babb;
+  --color-text-secondary-100: #ffffff;
+  --color-text-secondary-90: #eaeced;
+
+  --input-bg: #f6f8fa;
+  --border-color: #eaeced;
+
   --background: #ffffff;
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.dark {
+  /* Dark Theme */
+  --primary-100: #151e47;
+  --neutral-100: #151e47;
+  --neutral-90: #0a173a;
+  --tertiary-100: #cc9650;
+
+  --color-text-primary-100: #ffffff;
+  --color-text-primary-90: #e1e1e1;
+  --color-text-secondary-100: #ffffff;
+  --color-text-secondary-90: #eaeced;
+
+  --input-bg: #0a173a;
+  --border-color: #535a77;
 }
 
 body {
