latest-sticky-version

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   /* Light Theme */
-  --primary-100: #0010f7;
+  --primary-100: #1e42ac;
   --neutral-100: #ffffff;
   --neutral-90: #f6f8fa;
   --tertiary-100: #cc9650;
